--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ html{
 
 body {
   background-color: var(--black);
-  font-family: 'Nunito', sans-serif;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif; 
 }
 
 img {
@@ -130,6 +130,7 @@ img {
   font-size: 30px;
   margin: 0;
   font-weight: 800;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif; 
   -webkit-text-stroke: 0.5px var(--black);
 }
 
@@ -166,6 +167,7 @@ img {
 .nav{
   padding: 10px 40px;
   display: flex;
+  z-index:1;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -696,6 +698,226 @@ img {
   background-color: inherit;
   font-size: 40px;
 }
+
+@media only screen and (max-width: 800px) {
+  .team-hero {
+    margin-top: 10px;
+    min-height: 100px;
+    height: auto;
+    padding-top: 10px;
+  }
+
+}
+
+.team-hero {
+  margin: 0;
+  padding-top: 20px;
+  margin-top: 100px;
+  background-color: #2c2c2c;
+  min-height: 500px;
+  display: flex;
+}
+
+@media only screen and (max-width: 800px) {
+  .team-hero .picture {
+    display:none;
+  }
+
+}
+
+.team-hero .picture {
+  width: 50%;
+}
+
+.team-hero .description {
+  background-color: var(--orange);
+  font-size: 15px;
+  font-weight: normal;
+  color: #fff;
+  height: auto;
+  width: 50%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 800px) {
+  .team-hero .description {
+    width: 100%;
+    font-size: 10px;
+    padding: 20px;
+  }
+
+}
+
+@media only screen and (max-width: 800px){
+  .team-services {
+    display: block;
+    justify-content: ;
+  }
+}
+
+.team-services {
+  padding: 0 50px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-top: -65px;
+  background-color: var(--light-gray);
+}
+
+@media only screen and (max-width: 800px){
+  .team-services{
+    margin-top: -30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+}
+
+
+
+.team-service {
+  width: 130px;
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: var(--black);
+  border-radius: 50%;
+}
+.team-service:hover{
+  cursor: pointer;
+}
+
+
+@media only screen and (max-width: 800px){
+  .team-service{
+    display: inline-block;
+    height: auto;
+    width: 48%;
+    border-radius: 0;
+    margin: 5px;
+    padding: 5px 10px;
+  }
+}
+
+.active {
+  border-style: solid;
+  border-color: var(--orange-o);
+}
+
+.team-service img {
+  width: 45%;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 800px){
+  .team-service img{
+    display: none;
+  }
+}
+
+.team-service span {
+  color: var(--light-gray);
+  text-align: center;
+  font-size: 14px;
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 800px){
+  .team-service span{
+    font-size: 10px;
+    text-align: center;
+    width: 100%;
+  }
+  
+}
+
+.team-pictures {
+  background-color: var(--light-gray);
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+@media only screen and (max-width: 800px){
+  .team-pictures{
+    justify-content: space-between;
+  }
+  
+}
+
+.team-picture {
+  width: 20%;
+  position: relative;
+  left: 5%;
+  /* transform: translateX(-10%); */
+  margin: 10px 20px;
+  background-color: var(--black);
+  border-radius: 10%;
+  display: none;
+}
+
+@media only screen and (max-width: 800px){
+  .team-picture {
+    width: 200px;
+    left: 0;
+    margin: 5px;
+  }
+}
+
+.show {
+  display: block;
+  transition: all 0.5s ease;
+}
+
+.team-picture:hover img {
+  opacity: 0.1;
+  background-color: var(--orange);
+}
+
+.team-picture:hover span {
+  opacity: 1;
+}
+
+.team-picture img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  border-radius: 10%;
+}
+
+.team-picture span {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color: var(--orange);
+  font-size: 24px;
+  padding: 16px 32px;
+}
+
+@media only screen and (max-width: 800px){
+  .team-picture span{
+    font-size: 15px;
+  }
+  
+}
+
 
 /* 
 ==========================================================================
