--- a/css/main.css
+++ b/css/main.css
@@ -918,6 +918,24 @@ img {
   
 }
 
+#popUpBox{
+  width: 80%;
+  height: 60%;
+  overflow: hidden;
+  box-shadow: 0 0 10px black;
+  border-radius: 10px;
+  position: absolute;
+  /* top: 80%; */
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 2;
+  padding: 10px;
+  text-align: center;
+  display: none;
+  border-radius: 10px;
+  background-color: var(--light-gray);
+}
+
 
 /* 
 ==========================================================================
