--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,6 @@ img {
   background-color: var(--black);
 }
 
-
 @media only screen and (max-width: 800px) {
   .nav {
     display: block;
@@ -188,15 +187,6 @@ img {
     margin: 0 auto;
     text-align: center;
   }
-  .menu {
-    display: none;
-  }
-
-  .menu a {
-    display: none;
-  }
-
-
 }
 
 .site-header {
@@ -210,6 +200,7 @@ img {
 @media only screen and (max-width: 800px) {
   .site-header{
     min-height: 20px;
+    margin-top: 180px;
   }
 }
 
@@ -222,16 +213,7 @@ img {
   justify-content: center;
   align-items: center; 
 }
-@media only screen and (max-width: 800px) {
-  .menu-container{
-    display: flex;
-    margin: 0 auto;
-    width: 85%;
-    height: 100%;
-    justify-content: center;
-    align-items: center; 
-  }
-}
+
 
 .menu-container-img{
   flex: 1;
@@ -314,6 +296,18 @@ img {
 .menu a.selected{
   background-color: var(--orange);
   border-radius: 40px;
+}
+
+@media only screen and (max-width: 800px) {
+  .menu {
+    display: block;
+  }
+
+  .menu a {
+    margin: 0 auto;
+    font-size: 15px;
+    display: block;
+  }
 }
 
 .rrss {
