--- a/css/main.css
+++ b/css/main.css
@@ -696,7 +696,6 @@ img {
 @media only screen and (max-width: 800px) {
   .team-hero {
     margin-top: 10px;
-    min-height: 100px;
     height: auto;
     padding-top: 10px;
   }
@@ -759,7 +758,7 @@ img {
 
 @media only screen and (max-width: 800px){
   .team-services{
-    margin-top: -30px;
+    margin-top: -100px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -788,7 +787,7 @@ img {
   .team-service{
     display: inline-block;
     height: auto;
-    width: 48%;
+    width: 40%;
     border-radius: 0;
     margin: 5px;
     padding: 5px 10px;
@@ -849,7 +848,6 @@ img {
   width: 20%;
   position: relative;
   left: 5%;
-  /* transform: translateX(-10%); */
   margin: 10px 20px;
   background-color: var(--black);
   border-radius: 10%;
@@ -858,9 +856,9 @@ img {
 
 @media only screen and (max-width: 800px){
   .team-picture {
-    width: 200px;
+    width: 100%;
     left: 0;
-    margin: 5px;
+    margin: 10px 5px;
   }
 }
 
@@ -872,11 +870,14 @@ img {
 .team-picture:hover img {
   opacity: 0.1;
   background-color: var(--orange);
+  display: block;
 }
 
-.team-picture:hover span {
+.team-picture:hover span,
+.team-picture:hover ul {
   opacity: 1;
 }
+
 
 .team-picture img {
   opacity: 1;
@@ -888,26 +889,55 @@ img {
   border-radius: 10%;
 }
 
-.team-picture span {
+.team-picture div {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  width: 90%;
+}
+
+.team-picture div span {
+  display: block;
   transition: .5s ease;
   opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: left;
   color: var(--orange);
-  font-size: 24px;
-  padding: 16px 32px;
+  font-size: 1.2vw;
 }
 
 @media only screen and (max-width: 800px){
-  .team-picture span{
-    font-size: 15px;
+  .team-picture div span {
+    display: block;
+    transition: .5s ease;
+    opacity: 0;
+    text-align: left;
+    color: var(--orange);
+    font-size: 6vw;
   }
-  
 }
+
+.cv {
+  color: var(--light-gray) !important;
+  font-size: 0.8vw !important;
+  display: block;
+  transition: .5s ease;
+  opacity: 0;
+  text-align: left;
+  padding: 0 5%;
+}
+
+@media only screen and (max-width: 800px){
+  .cv {
+    color: var(--light-gray) !important;
+    font-size: 3vw !important;
+    display: block;
+    transition: .5s ease;
+    opacity: 0;
+    text-align: left;
+    padding: 0 5%;
+  }
+}
+
 
 .popUpBox{
   left:50%; 
